--- a/admin-login.html
+++ b/admin-login.html
@@ -205,9 +205,9 @@
 
     <script>
         // Initialize Supabase
-        const supabaseUrl = 'https://your-supabase-url.supabase.co';
-        const supabaseKey = 'your-supabase-key';
-        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+ const supabaseUrl = 'https://gmdjwwtlfjoiejsaqgdr.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdtZGp3d3RsZmpvaWVqc2FxZ2RyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg3MTA0MTgsImV4cCI6MjA3NDI4NjQxOH0.LcCQYXohWd8w8RDJ0NhzJLjHf3kg64g8iFuDgL1YTjE';
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
         // Initialize the application
         document.addEventListener('DOMContentLoaded', function() {
