--- a/index.html
+++ b/index.html
@@ -1888,7 +1888,7 @@
                                 </div>
                             </div>
                             <div class="hero-image">
-                                <img src="https://images.unsplash.com/photo-1616400619301-6bd6e3b7f3c0?ixlib=rb-4.0.3" alt="Shopping">
+                                <img src="https://cdn-icons-png.flaticon.com/512/263/263142.png" alt="Shopping">
                             </div>
                         </div>
                     </div>
