--- a/index.html
+++ b/index.html
@@ -1791,7 +1791,7 @@
                 <div class="header-top-content">
                     <div class="contact-info">
                         <span><i class="fas fa-phone"></i> +966 123 456 789</span>
-                        <span><i class="fas fa-envelope"></i> info@example.com</span>
+                        <span><i class="fas fa-envelope"></i> mustafa.omer@store.com</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
